WIP: base setup for prod
