# docs/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server for managing employees.",
@@ -33,10 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/database.Employee"
-                            }
+                            "$ref": "#/definitions/controller.Response"
                         }
                     },
                     "500": {
@@ -79,7 +79,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/database.Employee"
+                            "$ref": "#/definitions/controller.Response"
                         }
                     },
                     "400": {
@@ -130,7 +130,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/database.Employee"
+                            "$ref": "#/definitions/controller.Response"
                         }
                     },
                     "400": {
@@ -187,7 +187,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/database.Employee"
+                            "$ref": "#/definitions/controller.Response"
                         }
                     },
                     "400": {
@@ -290,7 +290,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/database.TokenResponse"
+                            "$ref": "#/definitions/controller.Response"
                         }
                     },
                     "400": {
@@ -316,6 +316,18 @@
         }
     },
     "definitions": {
+        "controller.Response": {
+            "type": "object",
+            "properties": {
+                "payload": {},
+                "status": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
+                }
+            }
+        },
         "customerr.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -363,15 +375,13 @@
                     "type": "string"
                 }
             }
-        },
-        "database.TokenResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-                }
-            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
